--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,12 +135,12 @@ jobs:
           scons target='${{ matrix.target }}' platform='${{ matrix.platform }}' arch='${{ matrix.arch }}' -j2
           ls -l project/addons/*/bin/
 
-      # - name: Copy extra files to addon
-      #   shell: sh
-      #   run: |
-      #     for addon in ${{ github.workspace }}/project/addons/*/; do
-      #       cp --no-clobber '${{ github.workspace }}/README.md' '${{ github.workspace }}/LICENSE' "$addon"
-      #     done
+      - name: Copy extra files to addon
+        shell: sh
+        run: |
+          for addon in ${{ github.workspace }}/project/addons/*/; do
+            cp --no-clobber '${{ github.workspace }}/README.md' '${{ github.workspace }}/LICENSE' "$addon"
+          done
 
       - name: Get version name
         id: version
