add simple demo meshes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -151,4 +151,4 @@ jobs:
         with:
           name: ${{ github.event.repository.name }}_${{ steps.version.outputs.version }}
           path: |
-            ${{ github.workspace }}/project/addons/godot_subdiv/
+            ${{ github.workspace }}/project/
