--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -141,6 +141,11 @@ jobs:
           for addon in ${{ github.workspace }}/project/addons/*/; do
             cp --no-clobber '${{ github.workspace }}/README.md' '${{ github.workspace }}/LICENSE' '${{ github.workspace }}/AUTHORS.md' '${{ github.workspace }}/THIRDPARTY.md' "$addon"
           done
+      - name: Remove unwanted files from artifact
+        shell: sh
+        run: |
+          rm -rf ${{ github.workspace }}/project/demo ${{ github.workspace }}/project/test
+          rm ${{ github.workspace }}/project/project.godot ${{ github.workspace }}/project/.gitignore ${{ github.workspace }}/project/.gitattributes
 
       - name: Get version name
         id: version
