--- a/project/addons/godot_subdiv/plugin.cfg
+++ b/project/addons/godot_subdiv/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="Godot Subdiv"
-description="Adds Catmull-Clark Subdivision using OpenSubdiv"
+description="Fast subdivision in Godot with opensubdiv."
 author="tefusion"
-version="0.1"
+version="0.3"
 script="godot_subdiv.gd"
