--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,32 +14,32 @@ jobs:
         include:
           - identifier: linux-debug
             name: Linux Debug
-            runner: ubuntu-18.04
-            target: debug
+            runner: ubuntu-20.04
+            target: template_debug
             platform: linux
             arch: x86_64
           - identifier: linux-release
             name: Linux Release
-            runner: ubuntu-18.04
-            target: release
+            runner: ubuntu-20.04
+            target: template_release
             platform: linux
             arch: x86_64
           - identifier: windows-debug
             name: Windows Debug
             runner: ubuntu-20.04
-            target: debug
+            target: template_debug
             platform: windows
             arch: x86_64
           - identifier: windows-release
             name: Windows Release
             runner: ubuntu-20.04
-            target: release
+            target: template_release
             platform: windows
             arch: x86_64
           - identifier: android-release
             name: Android Release
             runner: ubuntu-20.04
-            target: release
+            target: template_release
             platform: android
             arch: arm64
 
