--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,34 +44,6 @@ jobs:
             arch: arm64
 
     steps:
-      #      - name: (Bionic) Change package sources
-      #        if: ${{ matrix.runner == 'ubuntu-18.04' }}
-      #        shell: sh
-      #        run: |
-      #          sudo rm -f /etc/apt/sources.list.d/*
-      #          sudo tee -a /etc/apt/sources.list << EOT
-      #          deb http://archive.ubuntu.com/ubuntu/ bionic main restricted universe multiverse
-      #          deb http://archive.ubuntu.com/ubuntu/ bionic-updates main restricted universe multiverse
-      #          deb http://archive.ubuntu.com/ubuntu/ bionic-security main restricted universe multiverse
-      #          deb http://archive.ubuntu.com/ubuntu/ bionic-backports main restricted universe multiverse
-      #          EOT
-      #
-      #          sudo apt-get update
-
-      #      - name: (Focal) Change package sources
-      #        if: ${{ matrix.runner == 'ubuntu-20.04' }}
-      #        shell: sh
-      #        run: |
-      #          sudo rm -f /etc/apt/sources.list.d/*
-      #          sudo tee -a /etc/apt/sources.list << EOT
-      #          deb http://archive.ubuntu.com/ubuntu/ focal main restricted universe multiverse
-      #          deb http://archive.ubuntu.com/ubuntu/ focal-updates main restricted universe multiverse
-      #          deb http://archive.ubuntu.com/ubuntu/ focal-security main restricted universe multiverse
-      #          deb http://archive.ubuntu.com/ubuntu/ focal-backports main restricted universe multiverse
-      #          EOT
-      #
-      #          sudo apt-get update
-
       - name: (Windows) Install mingw64
         if: ${{ startsWith(matrix.identifier, 'windows-') }}
         shell: sh
@@ -82,9 +54,10 @@ jobs:
 
       - name: (Android) Set up Java 11
         if: ${{ startsWith(matrix.identifier, 'android-') }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
+          distribution: "zulu"
+          java-version: "11"
 
       - name: (Android) Set up Android SDK
         if: ${{ startsWith(matrix.identifier, 'android-') }}
@@ -97,7 +70,9 @@ jobs:
           "$ANDROID_SDK_ROOT"/cmdline-tools/latest/bin/sdkmanager --sdk_root="$ANDROID_SDK_ROOT" "platform-tools" "build-tools;30.0.3" "platforms;android-29" "cmdline-tools;latest" "cmake;3.10.2.4988404" "ndk;21.4.7075529"
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
+        with:
+          python-version: "pypy3.9"
 
       - name: Set up SCons
         shell: bash
@@ -107,7 +82,7 @@ jobs:
           scons --version
 
       - name: Checkout project
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           submodules: recursive
 
@@ -147,12 +122,8 @@ jobs:
           rm -rf ${{ github.workspace }}/project/demo ${{ github.workspace }}/project/test
           rm ${{ github.workspace }}/project/project.godot ${{ github.workspace }}/project/.gitignore ${{ github.workspace }}/project/.gitattributes
 
-      - name: Get version name
-        id: version
-        run: echo ::set-output name=version::${GITHUB_REF#refs/*/}
-
       - name: Upload artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: godot-subdiv
           path: |
