--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "godot-cpp"]
 	path = godot-cpp
-	url = https://github.com/tefusion/godot-cpp.git
+	url = https://github.com/godotengine/godot-cpp
